// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Pager Allineamento 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <section>
      <ul
        className="justify-content-center mb-3 pagination pagination-lg"
      >
        <li
          className="page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <ul
        className="justify-content-end mb-3 pagination pagination-sm"
      >
        <li
          className="page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </section>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Allineamento.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager Esempi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="pagination"
    >
      <li
        className="page-item"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Esempi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager Esempi interattivi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="pagination pagination-sm"
    >
      <li
        className="page-item"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "EsempiInterattivi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager Responsive 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="mb-3 pagination"
    >
      <li
        className="page-item"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          9
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          10
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-current="page"
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          11
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          12
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          13
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Responsive.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager Stato disabilitato e attivo 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="pagination"
    >
      <li
        className="page-item disabled"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-current="page"
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        className="page-item disabled"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        className="page-item disabled"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "StatoDisabilitatoAttivo.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Jump to page 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <nav
      className="pagination-wrapper"
    >
      <ul
        className="mb-3 pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            …
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            …
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <form
        className=""
      >
        <div
          className="   form-group"
        >
          <input
            className="form-control form-control"
            id="jumpToPage"
            maxLength="2"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
          />
          <label
            className=""
            htmlFor="jumpToPage"
          >
            Vai a ...
          </label>
        </div>
      </form>
    </nav>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Jump.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Link testuali 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="mb-3 pagination"
    >
      <li
        className="page-item"
      >
        <a
          aria-label="Previous"
          className="text page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            Precedente
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          …
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          24
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          25
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-current="page"
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          26
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          27
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          28
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          …
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          50
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="text page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            Successiva
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Link.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive More 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="mb-3 pagination"
    >
      <li
        className="page-item"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          …
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          24
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          25
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-current="page"
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          26
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          27
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          28
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          …
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          50
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <i
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "More.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Page changer 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <nav
      className="pagination-wrapper"
    >
      <ul
        className="mb-3 pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            …
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            …
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="btn btn-dropdown dropdown-toggle"
          id="pagerChanger"
          onClick={[Function]}
        >
          pag.10
        </a>
        <div
          aria-hidden={true}
          className="dropdown-menu"
          role="menu"
          tabIndex="-1"
          x-placement={undefined}
        >
          <button
            className="dropdown-item active"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            pag. 10
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            pag. 20
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            pag. 30
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            pag. 40
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            pag. 50
          </button>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Changer.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Simple mode 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <nav
      className="pagination-wrapper"
    >
      <ul
        className="mb-3 pagination"
      >
        <li
          className="page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            /
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            5
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Simple.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Total number 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <nav
      className="pagination-wrapper pagination-total"
    >
      <ul
        className="mb-3 pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            …
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-current="page"
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            …
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <i
                className="it-chevron-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <p>
        <span
          className="sr-only"
        >
          Pagina
        </span>
         24 di 50
      </p>
    </nav>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Total.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pagination Dimensione e allineamento 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <ul
        className="mb-3 pagination pagination-lg"
      >
        <li
          className="page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <span
                className="it-chevron-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="page-item active"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <span
                className="it-chevron-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <ul
        className="justify-content-end mb-3 pagination pagination-sm"
      >
        <li
          className="page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <span
                className="it-chevron-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="page-item active"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label={undefined}
            className="page-link"
            href="#"
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <span
                className="it-chevron-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "DimensioneAllineamento.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pagination Esempi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="pagination"
    >
      <li
        className="page-item"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <span
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <span
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Esempi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pagination Esempi interattivi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="pagination pagination-sm"
    >
      <li
        className="page-item"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <span
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <span
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "EsempiInterattivi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pagination Responsive 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="mb-3 pagination"
    >
      <li
        className="page-item"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <span
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <span
          className="p-3"
        >
          ...
        </span>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          9
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          10
        </a>
      </li>
      <li
        className="page-item active"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          11
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          12
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          13
        </a>
      </li>
      <li
        className="d-none d-sm-block page-item"
      >
        <span
          className="p-3"
        >
          ...
        </span>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <span
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Responsive.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Pagination Stato disabilitato e attivo 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="pagination"
    >
      <li
        className="page-item disabled"
      >
        <a
          aria-label="Previous"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <span
              className="it-chevron-left"
            />
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        className="page-item active"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label={undefined}
          className="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          aria-label="Next"
          className="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            <span
              className="it-chevron-right"
            />
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "StatoDisabilitatoAttivo.md",
      }
    }
  />
</div>
`;
